syntax = "proto3";

package router;
option go_package = "github.com/sh-miyoshi/go-rockmanexe/pkg/net/routerpb";

service Router {
    rpc SendAction(Action) returns (Result) {}
    rpc PublishData(AuthRequest) returns (stream Data) {}
}

message Action {
    enum ActionType {
        CHIPSEND = 0;
        USECHIP = 1;
        BUSTER = 2;
        MOVE = 3;
        DAMAGED = 4;
        NEWOBJECT = 5;
    }

    string sessionID = 1;
    string clientID = 2;
    ActionType type = 3;

    oneof data {
        string chipList = 4; // a list of chip id separated by ,
        bytes objectInfo = 5;
    }
}

message Result {
    bool success = 1;
    string errMsg = 2;
}

message AuthRequest {
    string id = 1;
    string key = 2;
    string version = 3;
}

message Data {
    enum MsgType {
        AUTHRESPONSE = 0;
        UPDATESTATUS = 1;
        DATA = 2;
    }

    enum Status {
        CONNECTWAIT = 0;
        CHIPSELECTWAIT = 1;
        ACTING = 2;
        GAMEEND = 3;
    }

    MsgType type = 1;
    oneof data {
        AuthResponse authRes = 2;
        Status status = 3;
        bytes rawData = 4;
    }
}

message AuthResponse {
    bool success = 1;
    string errMsg = 2;
    string sessionID = 3;
}